--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="bg-black">
                     <div class="title tit1">
                         <h2>The harder the luckier</h2>
-                        <p>个人简历</p>
+                        <p>生活是一种绵延不绝的渴望,渴望不断上升,变得更伟大而高贵。</p>
                         <p>web前端开发</p>
                     </div>
                 </div>
@@ -191,43 +191,42 @@
                 </div>
             </div>
             <div class="column page4">
-                <h2 class="title tit4">个人经历</h2>
+                <h2 class="title tit4">关于我</h2>
                 <div class="content">
                     <div class="history his1">
                         <div class="year">EXP1</div>
                         <dl class="intro">
-                            <dt class="company">网瘾少年</dt>
-                            <dt>2012.9 - 2014.6</dt>
-                            <dt class="job">high school</dt>
-                            <dd>通宵打LOL</dd>
-                            <dd>从第一打到倒数第一</dd>
-                            <dd>然后回不去了</dd>
-                            <dd>LOL也打的很菜</dd>
+                            <dt class="company">灵感 代码 梦想 未来</dt>
+                            <dd>学习是一个充实愉悦的过程</dd>
+                            <dd>前端更贴近用户，这种体验非常美妙</dd>
+                            <dd>热爱代码，也热爱一切美好的事物</dd>
+                            <dd>行路有良友，便是捷径</dd>
+                            <dd>带上我吧，一起看到更大的世界</dd>
                         </dl>
                     </div>
                     <div class="history his2">
                         <div class="year">EXP2</div>
                         <dl class="intro">
-                            <dt class="company">撸管屌丝</dt>
-                            <dt>2014.9 - 2016.7</dt>
-                            <dt class="job">University</dt>
-                            <dd>睡觉上课打LOL</dd>
-                            <dd>没挂过科</dd>
-                            <dd>没有女票</dd>
-                            <dd>没好好玩也没好好学</dd>
-                            <dd>lowest</dd>
+                            <dt class="company">工作经历</dt>
+                            <dt>2016.9 - 至今</dt>
+                            <dt class="job">广州崇易网络科技有限公司</dt>
+                            <dt>职位：web前端开发</dt>
+                            <dd>负责web端网页框架搭建、内容制作、JS交互效果实现</dd>
+                            <dd>配合进行页面代码的调试、bug修复、浏览器兼容问题</dd>
+                            <dd>应公司产品部规划，增加更多交互功能，提升用户体验，并对现有功能进行持续优化与迭代</dd>
+                            
                         </dl>
                     </div>
                     <div class="history his3 cur">
                         <div class="year">EXP3</div>
                         <dl class="intro">
-                            <dt class="company">web前端开发工程师</dt>
-                            <dt>2016.9 - 2020</dt>
-                            <dt class="job">Social</dt>
-                            <dd>运动更健康</dd>
-                            <dd>退役LOL</dd>
-                            <dd>开始看书了</dd>
-                            <dd>fighting</dd>
+                            <dt class="company">个人信息</dt>
+                           <dd>姓名：袁运龙</dd>
+                            <dd>性别：男</dd>
+                            <dd>出身年月：1996年2月</dd>
+                            <dd>邮箱：willsonYuan.163.com</dd>
+                            <dd>毕业院校：江西机电职业技术学院</dd>
+                            
                         </dl>
                     </div>
                 </div>
