--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </div>
                         <div class="pro-txt">
                             <h3>fullpage专题页面(双端)</h3>
-                            <p>全屏滚动，css3动画，弹幕，视频，pc及mobile双端这里都有哦，点开LiveDemo看看吧！</p>
+                            <p>全屏滚动，css3动画，弹幕，视频，pc及mobile双端</p>
                         </div>
                         <div class="pro-btn">
                             <a class="pro-link" href="javascript:;" target="_blank">LiveDemo</a>
@@ -113,8 +113,8 @@
                             <div class="iconfont icon-nodejs"></div>
                         </div>
                         <div class="pro-txt">
-                            <h3>node.js网络小爬虫</h3>
-                            <p>学习nodejs时写的一个网页爬虫，爬取慕课网上的课程信息，根据学习人数排序输出，并保存至json文件中。</p>
+                            <h3>小游戏</h3>
+                            <p>微信飞机大战，贪吃蛇</p>
                         </div>
                         <div class="pro-btn">
                             <a class="pro-link" href="javascript:;" target="_blank">LiveDemo</a>
@@ -194,7 +194,7 @@
                 <h2 class="title tit4">关于我</h2>
                 <div class="content">
                     <div class="history his1">
-                        <div class="year">EXP1</div>
+                        <div class="year">EXP3</div>
                         <dl class="intro">
                             <dt class="company">灵感 代码 梦想 未来</dt>
                             <dd>学习是一个充实愉悦的过程</dd>
@@ -218,15 +218,15 @@
                         </dl>
                     </div>
                     <div class="history his3 cur">
-                        <div class="year">EXP3</div>
+                        <div class="year">EXP1</div>
                         <dl class="intro">
-                            <dt class="company">个人信息</dt>
-                           <dd>姓名：袁运龙</dd>
-                            <dd>性别：男</dd>
-                            <dd>出身年月：1996年2月</dd>
-                            <dd>邮箱：willsonYuan.163.com</dd>
-                            <dd>毕业院校：江西机电职业技术学院</dd>
-                            
+                            <dt class="company">前端技术发展</dt>
+                           <dd>从静态走向动态</dd>
+                            <dd>从后端走向前端</dd>
+                            <dd>从前端走向全端</dd>
+                            <dd>未来只有两种工程师</dd>
+                            <dd>端工程师（手机端、PC端、TV端、VR端...）</dd>
+                            <dd>云工程师</dd>
                         </dl>
                     </div>
                 </div>
@@ -281,10 +281,10 @@
                     <h3>JOB</h3>
                     <p>web前端开发</p>
                 </li>
-                <li class="info-li">
+                <!--<li class="info-li">
                     <h3>EDU</h3>
                     <p></p>
-                </li>
+                </li>-->
                 <li class="info-li">
                     <h3>CONTACT</h3>
                     <p>985880434@qq.com</p>
