--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="iconfont icon-nodejs"></div>
                         </div>
                         <div class="pro-txt">
-                            <h3>小游戏</h3>
+                            <h3>JavaScript小游戏</h3>
                             <p>微信飞机大战，贪吃蛇</p>
                         </div>
                         <div class="pro-btn">
@@ -287,7 +287,7 @@
                 </li>-->
                 <li class="info-li">
                     <h3>CONTACT</h3>
-                    <p>985880434@qq.com</p>
+                    <p>wilsonyuan.ash@foxmail.com</p>
                 </li>
             </ul>
         </div>
