--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </div>
                 </div>
                 <div class="mouse-tips up iconfont icon-down"></div>
-                <div class="footer">Copyright©2017 &nbsp;&nbsp;&nbsp;All Rights Reserved &nbsp;&nbsp;&nbsp;Design by win5do
+                <div class="footer">Copyright©2017 &nbsp;&nbsp;&nbsp;All Rights Reserved &nbsp;&nbsp;&nbsp;
                 </div>
             </div>
         </div>
